# oden

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  ]
.github/: release-please-config.json
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  semantic-release.yml
crates/oden-app/: CHANGELOG.md  Cargo.toml
crates/oden-app/src/: actions.rs  appstatus.rs  fixtures.rs  icons.rs  main.rs  models.rs  repository.rs  root.rs  state.rs  store.rs  testutils.rs
crates/oden-app/src/views/: editor.rs  graph.rs  list.rs  mod.rs  titlebar.rs
crates/oden-core/: CHANGELOG.md  Cargo.toml
crates/oden-core/src/: db.rs  errors.rs  lib.rs  repository.rs
crates/oden-core/src/entities/: item.rs
crates/oden-graph/: CHANGELOG.md  Cargo.toml
crates/oden-graph/src/: fixtures.rs  forces.rs  lib.rs  simulation.rs
crates/oden-server/: Cargo.toml
src/: icons.rs  main.rs  models.rs  root.rs  state.rs  store.rs  testutils.rs
src/views/: editor.rs  list.rs
