[package]
name = "oden"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5.1"
anyhow = "1"
rust-embed = "8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
gpui = { version = "0.2.2", features = ["test-support"] }

