[workspace]
members = ["crates/oden-app", "crates/oden-core", "crates/oden-graph"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
gpui = "0.2.2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
