[package]
name = "oden"
version = "0.6.0"
edition = "2024"

[dependencies]
gpui-component = { version = "0.5.1", features = ["tree-sitter-languages"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1.2.1", features = ["uuid1"] }
oden-core = { path = "../oden-core" }
oden-graph = { path = "../oden-graph" }
gpui.workspace = true
anyhow.workspace= true
async-trait.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
[dev-dependencies]
gpui = { version = "0.2.2", features = ["test-support"] }
sea-orm = { version = "2.0.0-rc", default-features = false }
