[package]
name = "oden-core"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros", "uuid", "schema-sync", "entity-registry" ] }
directories = { version = "6.0.0" }
thiserror = { version = "1" }
url = { version = "2.5.6" }
chrono.workspace = true
anyhow.workspace = true
uuid.workspace = true
